# mizuiro

./: .gitignore  CMakeLists.txt  FindMizuiro.cmake  TODO  compile  config.h.in  config.hpp.in  files.txt  mizuiro-config.cmake  mizuiro-config.cmake.in  mizuiroConfig.cmake.in
.ryppl/: METATDATA
CMakeModules/: FcpptCMakeUtils.cmake  FindMizuiro.cmake
doc/: CMakeLists.txt  Doxyfile.in  all_files.txt  doc_files.txt  documentation.qbk  main.qbk
doc/files/: color.doxygen  image.doxygen  main.doxygen  type_class.doxygen
doc/xsl/: navbar.xsl
examples/: CMakeLists.txt  adapted_view.cpp  algorithm.cpp  canonical.cpp  convert.cpp  convert_view.cpp  dynamic.cpp  flipped_view.cpp  format.cpp  gray.cpp  heterogenous.cpp  hsv.cpp  image.cpp  init.cpp  linedraw.cpp  operators.cpp  planar.cpp  raw.cpp  raw_sub_view.cpp  raw_view.cpp  sub_view.cpp
include/mizuiro/: apply_const.hpp  apply_const_result.hpp  array.hpp  choose_const.hpp  compare.hpp  config.hpp  const_raw_pointer.hpp  const_tag.hpp  const_tag_fwd.hpp  decltype.hpp  default_init.hpp  default_init_fwd.hpp  denormalize.hpp  difference_type.hpp  empty.hpp  empty_fwd.hpp  enum_size.hpp  enum_size_fwd.hpp  integral_size.hpp  is_constness_tag.hpp  is_raw_pointer.hpp  no_init.hpp  no_init_fwd.hpp  nonconst_tag.hpp  nonconst_tag_fwd.hpp  normalize.hpp  raw_container.hpp  raw_pointer.hpp  raw_value.hpp  rebind_tag.hpp  size_list.hpp  size_type.hpp
include/mizuiro/access/: channel_index.hpp  color_pointer.hpp  color_pointer_raw.hpp  data_store_size.hpp  dynamic_index.hpp  extract_channel.hpp  homogenous_dynamic.hpp  homogenous_normal.hpp  homogenous_raw.hpp  homogenous_static.hpp  is.hpp  is_normal.hpp  is_raw.hpp  normal.hpp  normal_fwd.hpp  pointer.hpp  raw.hpp  raw_fwd.hpp  store_unit.hpp  stride.hpp
include/mizuiro/color/: channel.hpp  channel_max.hpp  channel_min.hpp  channel_proxy.hpp  channel_proxy_decl.hpp  channel_proxy_fwd.hpp  channel_proxy_impl.hpp  channel_value_type.hpp  compare.hpp  compare_function.hpp  convert.hpp  convert_static.hpp  decay_channel_proxy.hpp  denormalize.hpp  for_each_channel.hpp  for_each_channel_range.hpp  for_some_channels.hpp  format.hpp  format_argument.hpp  format_base_decl.hpp  format_base_impl.hpp  format_is_static.hpp  format_store.hpp  format_store_decl.hpp  format_store_fwd.hpp  format_store_impl.hpp  formats_are_compatible.hpp  get.hpp  get_channel.hpp  has_channel.hpp  heterogenous_static.hpp  heterogenous_static_fwd.hpp  homogenous.hpp  homogenous_dynamic.hpp  homogenous_dynamic_decl.hpp  homogenous_dynamic_fwd.hpp  homogenous_dynamic_impl.hpp  homogenous_fwd.hpp  homogenous_static.hpp  homogenous_static_fwd.hpp  (+31 more)
include/mizuiro/color/access/: advance_pointer.hpp  channel_index.hpp  channel_max.hpp  channel_min.hpp  channels.hpp  compare_channels.hpp  convert.hpp  dynamic_channel.hpp  dynamic_index.hpp  extract_channel.hpp  has_channel.hpp  heterogenous.hpp  heterogenous_normal.hpp  heterogenous_raw.hpp  homogenous.hpp  homogenous_dynamic.hpp  homogenous_normal.hpp  homogenous_raw.hpp  homogenous_static.hpp  init_store.hpp  is_last_channel.hpp  layout.hpp  pointer_difference.hpp  static.hpp  store_data.hpp  stride.hpp
include/mizuiro/color/channel/: alpha.hpp  alpha_fwd.hpp  blue.hpp  blue_fwd.hpp  depth.hpp  gray.hpp  green.hpp  green_fwd.hpp  hue.hpp  hue_fwd.hpp  is.hpp  is_channel.hpp  luminance.hpp  luminance_fwd.hpp  red.hpp  red_fwd.hpp  (+9 more)
include/mizuiro/detail/: apply_const.hpp  array_init.hpp  array_init_each.hpp  array_init_each_impl.hpp  array_init_each_rt.hpp  array_init_each_rt_function.hpp  assert_access.hpp  assert_constness.hpp  bit_count.hpp  bit_count_at_least.hpp  byte_count_from_bits.hpp  choose_const.hpp  compare.hpp  compiler.hpp  const_from_pointer.hpp  const_tag.hpp  constness_from_pointer.hpp  copy.hpp  copy_n.hpp  copy_n_base.hpp  copy_n_overlap.hpp  copy_overlap.hpp  copy_store.hpp  decltype_use.hpp  disable_gcc_warning.hpp  either_binary.hpp  either_decl.hpp  either_fwd.hpp  either_impl.hpp  either_unary.hpp  empty_format_base_decl.hpp  empty_format_base_fwd.hpp  empty_format_base_impl.hpp  empty_format_store_decl.hpp  empty_format_store_fwd.hpp  empty_format_store_impl.hpp  equal.hpp  external_begin.hpp  external_end.hpp  format_argument.hpp  (+49 more)
include/mizuiro/image/: basic_iterator_decl.hpp  basic_iterator_fwd.hpp  basic_iterator_impl.hpp  bound.hpp  bound_decl.hpp  bound_fwd.hpp  bound_impl.hpp  const_raw_pointer.hpp  const_view.hpp  dimension.hpp  dimension_comparison.hpp  dimension_content.hpp  dimension_decl.hpp  dimension_fwd.hpp  dimension_impl.hpp  dimension_null.hpp  dimension_output.hpp  flipped_view.hpp  format.hpp  format_argument.hpp  format_base_decl.hpp  format_base_impl.hpp  format_decl.hpp  format_fwd.hpp  format_impl.hpp  format_is_static.hpp  format_store.hpp  format_store_decl.hpp  format_store_fwd.hpp  format_store_impl.hpp  increment_iterator_decl.hpp  increment_iterator_fwd.hpp  increment_iterator_impl.hpp  indexed_iterator_decl.hpp  indexed_iterator_fwd.hpp  indexed_iterator_impl.hpp  indexed_ref_decl.hpp  indexed_ref_fwd.hpp  indexed_ref_impl.hpp  interleaved.hpp  (+60 more)
include/mizuiro/mpl/: all_of.hpp  apply.hpp  at.hpp  bool.hpp  cons.hpp  cons_list.hpp  cons_list_fwd.hpp  contains.hpp  contains_if.hpp  count.hpp  empty.hpp  false.hpp  first_of.hpp  head.hpp  index_of.hpp  integral_size.hpp  is_set.hpp  list.hpp  list_fwd.hpp  make_tag_of.hpp  range_to.hpp  range_to_fwd.hpp  size.hpp  size_list.hpp  sum.hpp  tag_of_fwd.hpp  tail.hpp  transform.hpp  true.hpp
include/mizuiro/range/: all_of.hpp  for_each.hpp  for_each_range.hpp  make.hpp  make_tag_of.hpp  tag_of_fwd.hpp
test/: CMakeLists.txt  can_copy.cpp  data.cpp  dynamic.cpp  empty_view.cpp  heterogenous.cpp  homogenous.cpp  image.cpp  iterator_position.cpp  prepare_store.cpp  range.cpp  view.cpp  views_are_compatible.cpp
test/algorithm/: clone.cpp
test/convert/: rgb_srgb.cpp  shuffle.cpp  swizzle.cpp
test/include/mizuiro/test/: external_begin.hpp  external_end.hpp
util/: check_includes.sh  license_paths.json  prettify_includes.sh  update_cmake.sh  update_license.sh
(+767 files in other folders)
