cmake_minimum_required(
	VERSION
	2.8.12
)

project(
	mizuiro
)

option(
	ENABLE_FCPPT
	"Use fcppt utilities"
	OFF
)

if(
	ENABLE_FCPPT
)
	find_package(
		fcppt
		REQUIRED
	)
else()
	set(
		INSTALL_INCLUDE_DIR
		"${CMAKE_INSTALL_PREFIX}/include"
		CACHE
		STRING
		"Custom include installation directory"
	)

	set(
		INSTALL_CMAKEMODULES_DIR
		"${CMAKE_INSTALL_PREFIX}/share/cmake/Modules"
		CACHE
		STRING
		"Custom cmake module installation directory"
	)

	if(
		CMAKE_COMPILER_IS_GNUCXX
	)
		add_definitions(
			-std=c++11
		)
	endif()
endif()

option(
	ENABLE_TEST
	"Build the tests"
	ON
)

if(
	ENABLE_TEST
)
	set(
		NEEDED_BOOST_LIBS
		"unit_test_framework"
	)
endif()

find_package(
	Boost 1.40.0 REQUIRED
	${NEEDED_BOOST_LIBS}
)

set(
	MIZUIRO_HAVE_FCPPT
	${ENABLE_FCPPT}
)

include_directories(
	include
)

if(
	ENABLE_FCPPT
)
	include(
		FcpptCMakeUtils
	)

	include_directories(
		${FCPPT_UTILS_INCLUDE_SYSTEM}
		${Boost_INCLUDE_DIR}
	)
else()
	include_directories(
		SYSTEM
		${Boost_INCLUDE_DIR}
	)
endif()

if(
	ENABLE_FCPPT
)
	include_directories(
		${fcppt_INCLUDE_DIRS}
	)
endif()

include(
	CheckCXXSourceCompiles
)

check_cxx_source_compiles(
	"int main()
	{
	if(__builtin_expect(true, 0))
	{}
	}"
	MIZUIRO_HAVE_BUILTIN_EXPECT
)

set(
	MIZUIRO_SOURCE_DIR
	"${${PROJECT_NAME}_SOURCE_DIR}"
)

set(
	MIZUIRO_BINARY_DIR
	"${${PROJECT_NAME}_BINARY_DIR}"
)

configure_file(
	${MIZUIRO_SOURCE_DIR}/config.hpp.in
	${MIZUIRO_BINARY_DIR}/include/mizuiro/config.hpp
)

include_directories(
	${MIZUIRO_BINARY_DIR}/include
)

install(
	DIRECTORY
	include/
	DESTINATION
	${INSTALL_INCLUDE_DIR}
)

install(
	FILES
	${MIZUIRO_BINARY_DIR}/include/mizuiro/config.hpp
	DESTINATION
	${INSTALL_INCLUDE_DIR}/mizuiro
)

option(
	ENABLE_EXAMPLES
	"Build the examples"
	ON
)

if(
	ENABLE_EXAMPLES
)
	add_subdirectory(
		examples
	)
endif()

if(
	ENABLE_TEST
)
	enable_testing()

	add_subdirectory(
		test
	)
endif()

set(
	MIZUIRO_FILES
	include/mizuiro/access/normal.hpp
	include/mizuiro/access/raw.hpp
	include/mizuiro/apply_const.hpp
	include/mizuiro/apply_const_result.hpp
	include/mizuiro/array.hpp
	include/mizuiro/color/access/channel_index.hpp
	include/mizuiro/color/access/channel_index_ns/tag.hpp
	include/mizuiro/color/access/channel_max.hpp
	include/mizuiro/color/access/channel_max_ns/tag.hpp
	include/mizuiro/color/access/channel_min.hpp
	include/mizuiro/color/access/channel_min_ns/tag.hpp
	include/mizuiro/color/access/compare_channels.hpp
	include/mizuiro/color/access/compare_channels_ns/tag.hpp
	include/mizuiro/color/access/extract_channel.hpp
	include/mizuiro/color/access/extract_channel_ns/tag.hpp
	include/mizuiro/color/access/has_channel.hpp
	include/mizuiro/color/access/has_channel_ns/tag.hpp
	include/mizuiro/color/access/layout.hpp
	include/mizuiro/color/access/layout_ns/tag.hpp
	include/mizuiro/color/access/stride.hpp
	include/mizuiro/color/access/stride_ns/tag.hpp
	include/mizuiro/color/channel/alpha.hpp
	include/mizuiro/color/channel/blue.hpp
	include/mizuiro/color/channel/depth.hpp
	include/mizuiro/color/channel/green.hpp
	include/mizuiro/color/channel/hue.hpp
	include/mizuiro/color/channel/luminance.hpp
	include/mizuiro/color/channel/red.hpp
	include/mizuiro/color/channel/saturation.hpp
	include/mizuiro/color/channel/stencil.hpp
	include/mizuiro/color/channel/tag.hpp
	include/mizuiro/color/channel/undefined.hpp
	include/mizuiro/color/channel/value.hpp
	include/mizuiro/color/channel_proxy.hpp
	include/mizuiro/color/channel_proxy_decl.hpp
	include/mizuiro/color/channel_proxy_fwd.hpp
	include/mizuiro/color/channel_proxy_impl.hpp
	include/mizuiro/color/compare.hpp
	include/mizuiro/color/conversion/detail/channel_to_max.hpp
	include/mizuiro/color/conversion/detail/channel_to_max_functor.hpp
	include/mizuiro/color/conversion/detail/channel_to_min.hpp
	include/mizuiro/color/conversion/detail/channel_to_min_functor.hpp
	include/mizuiro/color/conversion/detail/copy_and_convert_channel.hpp
	include/mizuiro/color/conversion/detail/copy_and_convert_channel_functor.hpp
	include/mizuiro/color/conversion/detail/copy_or_default_channel.hpp
	include/mizuiro/color/conversion/detail/copy_or_max_alpha.hpp
	include/mizuiro/color/conversion/detail/copy_or_min_channel.hpp
	include/mizuiro/color/conversion/detail/copy_or_min_channel_functor.hpp
	include/mizuiro/color/conversion/detail/exclude_channel_functor.hpp
	include/mizuiro/color/conversion/detail/logical_and.hpp
	include/mizuiro/color/conversion/detail/make_logical_and.hpp
	include/mizuiro/color/conversion/detail/rgb_from_chroma.hpp
	include/mizuiro/color/conversion/hsv_to_rgb.hpp
	include/mizuiro/color/conversion/same_to_same.hpp
	include/mizuiro/color/convert.hpp
	include/mizuiro/color/convert_static.hpp
	include/mizuiro/color/convert_static/converter.hpp
	include/mizuiro/color/convert_static/hsv_to_rgb.hpp
	include/mizuiro/color/convert_static/is_hsv.hpp
	include/mizuiro/color/convert_static/is_rgb.hpp
	include/mizuiro/color/convert_static/is_static.hpp
	include/mizuiro/color/convert_static/same_to_same.hpp
	include/mizuiro/color/denormalize.hpp
	include/mizuiro/color/detail/bit_channel_access_normal.hpp
	include/mizuiro/color/detail/bit_channel_access_raw.hpp
	include/mizuiro/color/detail/compare.hpp
	include/mizuiro/color/detail/copy_channel.hpp
	include/mizuiro/color/detail/dynamic_channel_to_pos.hpp
	include/mizuiro/color/detail/for_some_channels_functor.hpp
	include/mizuiro/color/detail/full_channel_max.hpp
	include/mizuiro/color/detail/full_channel_min.hpp
	include/mizuiro/color/detail/heterogenous_bits.hpp
	include/mizuiro/color/detail/heterogenous_channel_bits.hpp
	include/mizuiro/color/detail/initialize_dynamic_indices.hpp
	include/mizuiro/color/detail/invalid_dynamic_index.hpp
	include/mizuiro/color/detail/is_last_channel.hpp
	include/mizuiro/color/detail/output_channel.hpp
	include/mizuiro/color/detail/promote_channel.hpp
	include/mizuiro/color/detail/raw_channel_access.hpp
	include/mizuiro/color/detail/static_to_dynamic_channel.hpp
	include/mizuiro/color/detail/unwrap_channel.hpp
	include/mizuiro/color/for_each_channel.hpp
	include/mizuiro/color/for_some_channels.hpp
	include/mizuiro/color/format/argument.hpp
	include/mizuiro/color/format/base_decl.hpp
	include/mizuiro/color/format/base_impl.hpp
	include/mizuiro/color/format/dynamic_ns/channel_index.hpp
	include/mizuiro/color/format/dynamic_ns/compare_channels.hpp
	include/mizuiro/color/format/dynamic_ns/has_channel.hpp
	include/mizuiro/color/format/dynamic_ns/has_channel_static.hpp
	include/mizuiro/color/format/dynamic_ns/layout.hpp
	include/mizuiro/color/format/dynamic_ns/needs_store.hpp
	include/mizuiro/color/format/dynamic_ns/static_to_dynamic_channel_fwd.hpp
	include/mizuiro/color/format/dynamic_ns/tag.hpp
	include/mizuiro/color/format/heterogenous_ns/channel_reference_normal.hpp
	include/mizuiro/color/format/heterogenous_ns/channel_reference_raw.hpp
	include/mizuiro/color/format/heterogenous_ns/channel_value.hpp
	include/mizuiro/color/format/heterogenous_ns/extract_channel.hpp
	include/mizuiro/color/format/heterogenous_ns/pointer_normal.hpp
	include/mizuiro/color/format/heterogenous_ns/store.hpp
	include/mizuiro/color/format/heterogenous_ns/stride_normal.hpp
	include/mizuiro/color/format/heterogenous_ns/stride_raw.hpp
	include/mizuiro/color/format/heterogenous_ns/tag.hpp
	include/mizuiro/color/format/heterogenous_static.hpp
	include/mizuiro/color/format/heterogenous_static_fwd.hpp
	include/mizuiro/color/format/heterogenous_static_ns/tag.hpp
	include/mizuiro/color/format/heterogenous_static_ns/tag_of.hpp
	include/mizuiro/color/format/homogenous_dynamic.hpp
	include/mizuiro/color/format/homogenous_dynamic_decl.hpp
	include/mizuiro/color/format/homogenous_dynamic_fwd.hpp
	include/mizuiro/color/format/homogenous_dynamic_impl.hpp
	include/mizuiro/color/format/homogenous_dynamic_ns/tag.hpp
	include/mizuiro/color/format/homogenous_dynamic_ns/tag_of.hpp
	include/mizuiro/color/format/homogenous_ns/channel_max.hpp
	include/mizuiro/color/format/homogenous_ns/channel_min.hpp
	include/mizuiro/color/format/homogenous_ns/channel_reference_normal.hpp
	include/mizuiro/color/format/homogenous_ns/channel_reference_raw.hpp
	include/mizuiro/color/format/homogenous_ns/channel_value.hpp
	include/mizuiro/color/format/homogenous_ns/extract_channel_normal.hpp
	include/mizuiro/color/format/homogenous_ns/extract_channel_raw.hpp
	include/mizuiro/color/format/homogenous_ns/pointer_normal.hpp
	include/mizuiro/color/format/homogenous_ns/store.hpp
	include/mizuiro/color/format/homogenous_ns/stride_normal.hpp
	include/mizuiro/color/format/homogenous_ns/stride_raw.hpp
	include/mizuiro/color/format/homogenous_ns/tag.hpp
	include/mizuiro/color/format/homogenous_static.hpp
	include/mizuiro/color/format/homogenous_static_fwd.hpp
	include/mizuiro/color/format/homogenous_static_ns/tag.hpp
	include/mizuiro/color/format/homogenous_static_ns/tag_of.hpp
	include/mizuiro/color/format/include/dynamic.hpp
	include/mizuiro/color/format/include/heterogenous.hpp
	include/mizuiro/color/format/include/heterogenous_static.hpp
	include/mizuiro/color/format/include/homogenous.hpp
	include/mizuiro/color/format/include/homogenous_dynamic.hpp
	include/mizuiro/color/format/include/homogenous_static.hpp
	include/mizuiro/color/format/include/static.hpp
	include/mizuiro/color/format/make_tag_of.hpp
	include/mizuiro/color/format/raw_ns/pointer.hpp
	include/mizuiro/color/format/static_ns/channel_index.hpp
	include/mizuiro/color/format/static_ns/compare_channels.hpp
	include/mizuiro/color/format/static_ns/has_channel.hpp
	include/mizuiro/color/format/static_ns/has_channel_static.hpp
	include/mizuiro/color/format/static_ns/layout.hpp
	include/mizuiro/color/format/static_ns/needs_store.hpp
	include/mizuiro/color/format/static_ns/tag.hpp
	include/mizuiro/color/format/store.hpp
	include/mizuiro/color/format/store_decl.hpp
	include/mizuiro/color/format/store_fwd.hpp
	include/mizuiro/color/format/store_impl.hpp
	include/mizuiro/color/format/tag_of_fwd.hpp
	include/mizuiro/color/formats_are_compatible.hpp
	include/mizuiro/color/init.hpp
	include/mizuiro/color/init/alpha.hpp
	include/mizuiro/color/init/blue.hpp
	include/mizuiro/color/init/depth.hpp
	include/mizuiro/color/init/detail/assign_object.hpp
	include/mizuiro/color/init/detail/channel_percentage.hpp
	include/mizuiro/color/init/detail/channel_percentage_fwd.hpp
	include/mizuiro/color/init/detail/channel_value.hpp
	include/mizuiro/color/init/detail/channel_value_fwd.hpp
	include/mizuiro/color/init/detail/make_trampoline.hpp
	include/mizuiro/color/init/detail/make_values.hpp
	include/mizuiro/color/init/detail/set_channel.hpp
	include/mizuiro/color/init/detail/values.hpp
	include/mizuiro/color/init/detail/values_fwd.hpp
	include/mizuiro/color/init/detail/visitor.hpp
	include/mizuiro/color/init/green.hpp
	include/mizuiro/color/init/hue.hpp
	include/mizuiro/color/init/luminance.hpp
	include/mizuiro/color/init/red.hpp
	include/mizuiro/color/init/saturation.hpp
	include/mizuiro/color/init/stencil.hpp
	include/mizuiro/color/init/trampoline.hpp
	include/mizuiro/color/init/value.hpp
	include/mizuiro/color/is_color.hpp
	include/mizuiro/color/layout/additive.hpp
	include/mizuiro/color/layout/alpha.hpp
	include/mizuiro/color/layout/argb.hpp
	include/mizuiro/color/layout/bgr.hpp
	include/mizuiro/color/layout/bgra.hpp
	include/mizuiro/color/layout/bgrx.hpp
	include/mizuiro/color/layout/cylindrical.hpp
	include/mizuiro/color/layout/depth.hpp
	include/mizuiro/color/layout/depth_stencil.hpp
	include/mizuiro/color/layout/gray.hpp
	include/mizuiro/color/layout/hsv.hpp
	include/mizuiro/color/layout/hsva.hpp
	include/mizuiro/color/layout/is_same.hpp
	include/mizuiro/color/layout/la.hpp
	include/mizuiro/color/layout/luminance.hpp
	include/mizuiro/color/layout/red.hpp
	include/mizuiro/color/layout/rgb.hpp
	include/mizuiro/color/layout/rgba.hpp
	include/mizuiro/color/layout/rgbx.hpp
	include/mizuiro/color/layout/s_additive.hpp
	include/mizuiro/color/layout/s_rgb.hpp
	include/mizuiro/color/layout/s_rgba.hpp
	include/mizuiro/color/layout/special.hpp
	include/mizuiro/color/normalize.hpp
	include/mizuiro/color/object.hpp
	include/mizuiro/color/object_decl.hpp
	include/mizuiro/color/object_fwd.hpp
	include/mizuiro/color/object_impl.hpp
	include/mizuiro/color/operators.hpp
	include/mizuiro/color/operators/add.hpp
	include/mizuiro/color/operators/detail/binary_op.hpp
	include/mizuiro/color/operators/detail/binary_op_channel.hpp
	include/mizuiro/color/operators/detail/scalar_multiply.hpp
	include/mizuiro/color/operators/scalar_multiply.hpp
	include/mizuiro/color/operators/subtract.hpp
	include/mizuiro/color/output.hpp
	include/mizuiro/color/proxy.hpp
	include/mizuiro/color/proxy_decl.hpp
	include/mizuiro/color/proxy_fwd.hpp
	include/mizuiro/color/proxy_impl.hpp
	include/mizuiro/color/types/channel_reference.hpp
	include/mizuiro/color/types/channel_reference_ns/tag.hpp
	include/mizuiro/color/types/channel_value.hpp
	include/mizuiro/color/types/channel_value_ns/tag.hpp
	include/mizuiro/color/types/channel_value_tpl.hpp
	include/mizuiro/color/types/has_channel_static.hpp
	include/mizuiro/color/types/has_channel_static_ns/tag.hpp
	include/mizuiro/color/types/needs_store.hpp
	include/mizuiro/color/types/needs_store_ns/tag.hpp
	include/mizuiro/color/types/pointer.hpp
	include/mizuiro/color/types/pointer_ns/tag.hpp
	include/mizuiro/color/types/store.hpp
	include/mizuiro/color/types/store_ns/tag.hpp
	include/mizuiro/const_raw_pointer.hpp
	include/mizuiro/const_tag.hpp
	include/mizuiro/detail/bit_count.hpp
	include/mizuiro/detail/byte_count_from_bits.hpp
	include/mizuiro/detail/choose_const.hpp
	include/mizuiro/detail/copy.hpp
	include/mizuiro/detail/copy_n.hpp
	include/mizuiro/detail/copy_n_base.hpp
	include/mizuiro/detail/copy_n_overlap.hpp
	include/mizuiro/detail/copy_overlap.hpp
	include/mizuiro/detail/disable_gcc_warning.hpp
	include/mizuiro/detail/empty_format_base_decl.hpp
	include/mizuiro/detail/empty_format_base_fwd.hpp
	include/mizuiro/detail/empty_format_base_impl.hpp
	include/mizuiro/detail/external_begin.hpp
	include/mizuiro/detail/external_end.hpp
	include/mizuiro/detail/format_argument.hpp
	include/mizuiro/detail/format_base_decl.hpp
	include/mizuiro/detail/format_base_fwd.hpp
	include/mizuiro/detail/format_base_impl.hpp
	include/mizuiro/detail/ignore_effcpp.hpp
	include/mizuiro/detail/index_of.hpp
	include/mizuiro/detail/likely.hpp
	include/mizuiro/detail/make_filter_view.hpp
	include/mizuiro/detail/nonassignable.hpp
	include/mizuiro/detail/normal_format_base_decl.hpp
	include/mizuiro/detail/normal_format_base_fwd.hpp
	include/mizuiro/detail/normal_format_base_impl.hpp
	include/mizuiro/detail/optional_decl.hpp
	include/mizuiro/detail/optional_fwd.hpp
	include/mizuiro/detail/optional_impl.hpp
	include/mizuiro/detail/pop_warning.hpp
	include/mizuiro/detail/push_warning.hpp
	include/mizuiro/detail/uint_least.hpp
	include/mizuiro/detail/unlikely.hpp
	include/mizuiro/detail/variant_apply_binary.hpp
	include/mizuiro/detail/variant_apply_ternary.hpp
	include/mizuiro/detail/variant_apply_unary.hpp
	include/mizuiro/detail/variant_decl.hpp
	include/mizuiro/detail/variant_fwd.hpp
	include/mizuiro/detail/variant_impl.hpp
	include/mizuiro/difference_type.hpp
	include/mizuiro/enum_size.hpp
	include/mizuiro/enum_size_fwd.hpp
	include/mizuiro/image/access/dereference.hpp
	include/mizuiro/image/access/dereference_ns/tag.hpp
	include/mizuiro/image/access/store_size.hpp
	include/mizuiro/image/access/store_size_ns/tag.hpp
	include/mizuiro/image/access/stride.hpp
	include/mizuiro/image/access/stride_ns/tag.hpp
	include/mizuiro/image/algorithm/binary_iteration.hpp
	include/mizuiro/image/algorithm/bresenham.hpp
	include/mizuiro/image/algorithm/clone.hpp
	include/mizuiro/image/algorithm/copy.hpp
	include/mizuiro/image/algorithm/copy_and_convert.hpp
	include/mizuiro/image/algorithm/copy_different_channel_order.hpp
	include/mizuiro/image/algorithm/copy_same_channel_order.hpp
	include/mizuiro/image/algorithm/detail/binary_iteration.hpp
	include/mizuiro/image/algorithm/detail/copy_and_convert.hpp
	include/mizuiro/image/algorithm/detail/copy_element.hpp
	include/mizuiro/image/algorithm/detail/copy_element_overlapping.hpp
	include/mizuiro/image/algorithm/detail/copy_impl.hpp
	include/mizuiro/image/algorithm/detail/fill.hpp
	include/mizuiro/image/algorithm/detail/print.hpp
	include/mizuiro/image/algorithm/detail/transform_binary.hpp
	include/mizuiro/image/algorithm/detail/transform_ternary.hpp
	include/mizuiro/image/algorithm/detail/unary_iteration.hpp
	include/mizuiro/image/algorithm/detail/unwrap_binary_both.hpp
	include/mizuiro/image/algorithm/detail/unwrap_binary_first.hpp
	include/mizuiro/image/algorithm/detail/unwrap_binary_second.hpp
	include/mizuiro/image/algorithm/detail/unwrap_unary.hpp
	include/mizuiro/image/algorithm/fill.hpp
	include/mizuiro/image/algorithm/fill_c.hpp
	include/mizuiro/image/algorithm/for_each.hpp
	include/mizuiro/image/algorithm/may_overlap.hpp
	include/mizuiro/image/algorithm/may_overlap_fwd.hpp
	include/mizuiro/image/algorithm/print.hpp
	include/mizuiro/image/algorithm/transform.hpp
	include/mizuiro/image/algorithm/unary_iteration.hpp
	include/mizuiro/image/bound.hpp
	include/mizuiro/image/bound_decl.hpp
	include/mizuiro/image/bound_fwd.hpp
	include/mizuiro/image/bound_impl.hpp
	include/mizuiro/image/const_view.hpp
	include/mizuiro/image/detail/advance_iterator.hpp
	include/mizuiro/image/detail/compare_iterator.hpp
	include/mizuiro/image/detail/decrement_iterator.hpp
	include/mizuiro/image/detail/dereference_iterator.hpp
	include/mizuiro/image/detail/edge_pos_begin.hpp
	include/mizuiro/image/detail/edge_pos_end.hpp
	include/mizuiro/image/detail/flipped_edge.hpp
	include/mizuiro/image/detail/flipped_pitch.hpp
	include/mizuiro/image/detail/flipped_start.hpp
	include/mizuiro/image/detail/increment_iterator.hpp
	include/mizuiro/image/detail/iterator_base.hpp
	include/mizuiro/image/detail/iterator_data.hpp
	include/mizuiro/image/detail/iterator_difference.hpp
	include/mizuiro/image/detail/iterator_format_store.hpp
	include/mizuiro/image/detail/linear_iterator_position.hpp
	include/mizuiro/image/detail/pitch_difference.hpp
	include/mizuiro/image/detail/pitch_iterator_position.hpp
	include/mizuiro/image/detail/raw_view_from_pointer.hpp
	include/mizuiro/image/detail/relative_position.hpp
	include/mizuiro/image/detail/stacked_dim.hpp
	include/mizuiro/image/detail/stacked_dim_array.hpp
	include/mizuiro/image/detail/subview_pitch.hpp
	include/mizuiro/image/detail/view_begin.hpp
	include/mizuiro/image/detail/view_convert_const.hpp
	include/mizuiro/image/detail/view_data.hpp
	include/mizuiro/image/detail/view_end.hpp
	include/mizuiro/image/detail/view_format_store.hpp
	include/mizuiro/image/detail/view_pitch.hpp
	include/mizuiro/image/detail/view_size.hpp
	include/mizuiro/image/dimension.hpp
	include/mizuiro/image/dimension_decl.hpp
	include/mizuiro/image/dimension_fwd.hpp
	include/mizuiro/image/dimension_impl.hpp
	include/mizuiro/image/flipped_view.hpp
	include/mizuiro/image/format/argument.hpp
	include/mizuiro/image/format/base_decl.hpp
	include/mizuiro/image/format/base_impl.hpp
	include/mizuiro/image/format/include/interleaved.hpp
	include/mizuiro/image/format/interleaved.hpp
	include/mizuiro/image/format/interleaved_decl.hpp
	include/mizuiro/image/format/interleaved_fwd.hpp
	include/mizuiro/image/format/interleaved_impl.hpp
	include/mizuiro/image/format/interleaved_ns/dereference.hpp
	include/mizuiro/image/format/interleaved_ns/needs_store.hpp
	include/mizuiro/image/format/interleaved_ns/pointer.hpp
	include/mizuiro/image/format/interleaved_ns/reference.hpp
	include/mizuiro/image/format/interleaved_ns/store_normal.hpp
	include/mizuiro/image/format/interleaved_ns/store_raw.hpp
	include/mizuiro/image/format/interleaved_ns/store_size.hpp
	include/mizuiro/image/format/interleaved_ns/stride.hpp
	include/mizuiro/image/format/interleaved_ns/tag.hpp
	include/mizuiro/image/format/interleaved_ns/tag_of.hpp
	include/mizuiro/image/format/interleaved_ns/value_type.hpp
	include/mizuiro/image/format/make_tag_of.hpp
	include/mizuiro/image/format/store.hpp
	include/mizuiro/image/format/store_decl.hpp
	include/mizuiro/image/format/store_fwd.hpp
	include/mizuiro/image/format/store_impl.hpp
	include/mizuiro/image/format/tag_of_fwd.hpp
	include/mizuiro/image/format/to_color_store.hpp
	include/mizuiro/image/is_raw_view.hpp
	include/mizuiro/image/iterator_decl.hpp
	include/mizuiro/image/iterator_fwd.hpp
	include/mizuiro/image/iterator_impl.hpp
	include/mizuiro/image/iterator_position.hpp
	include/mizuiro/image/linear_iterator_decl.hpp
	include/mizuiro/image/linear_iterator_fwd.hpp
	include/mizuiro/image/linear_iterator_impl.hpp
	include/mizuiro/image/linear_view.hpp
	include/mizuiro/image/linear_view_decl.hpp
	include/mizuiro/image/linear_view_fwd.hpp
	include/mizuiro/image/linear_view_impl.hpp
	include/mizuiro/image/make_const_view.hpp
	include/mizuiro/image/make_raw_view.hpp
	include/mizuiro/image/move_iterator.hpp
	include/mizuiro/image/pitch_iterator_decl.hpp
	include/mizuiro/image/pitch_iterator_fwd.hpp
	include/mizuiro/image/pitch_iterator_impl.hpp
	include/mizuiro/image/pitch_type.hpp
	include/mizuiro/image/pitch_view.hpp
	include/mizuiro/image/pitch_view_decl.hpp
	include/mizuiro/image/pitch_view_fwd.hpp
	include/mizuiro/image/pitch_view_impl.hpp
	include/mizuiro/image/raw_container_decl.hpp
	include/mizuiro/image/raw_container_fwd.hpp
	include/mizuiro/image/raw_container_impl.hpp
	include/mizuiro/image/store.hpp
	include/mizuiro/image/store_decl.hpp
	include/mizuiro/image/store_fwd.hpp
	include/mizuiro/image/store_impl.hpp
	include/mizuiro/image/sub_view.hpp
	include/mizuiro/image/to_pitch_view.hpp
	include/mizuiro/image/types/needs_store.hpp
	include/mizuiro/image/types/needs_store_ns/tag.hpp
	include/mizuiro/image/types/pointer.hpp
	include/mizuiro/image/types/pointer_ns/tag.hpp
	include/mizuiro/image/types/reference.hpp
	include/mizuiro/image/types/reference_ns/tag.hpp
	include/mizuiro/image/types/store.hpp
	include/mizuiro/image/types/store_ns/tag.hpp
	include/mizuiro/image/types/value_type.hpp
	include/mizuiro/image/types/value_type_ns/tag.hpp
	include/mizuiro/image/view.hpp
	include/mizuiro/image/view_decl.hpp
	include/mizuiro/image/view_fwd.hpp
	include/mizuiro/image/view_impl.hpp
	include/mizuiro/image/views_are_compatible.hpp
	include/mizuiro/image/views_have_same_channel_order.hpp
	include/mizuiro/integral_size.hpp
	include/mizuiro/is_raw_pointer.hpp
	include/mizuiro/nonconst_tag.hpp
	include/mizuiro/raw_pointer.hpp
	include/mizuiro/raw_value.hpp
	include/mizuiro/size_type.hpp
)

if(
	ENABLE_FCPPT
)
	fcppt_utils_add_source_groups(
		"${MIZUIRO_FILES}"
	)

	fcppt_utils_add_dummy_target(
		mizuiro
		"${MIZUIRO_FILES}"
	)

	set(
		FCPPT_UTILS_NO_TARGETS
		TRUE
	)

	fcppt_utils_generate_config(
		TRUE
	)
endif()
